buildscript {
  repositories {
    mavenLocal()
    mavenCentral()
  }
  dependencies {
    classpath("net.serenity-bdd:serenity-single-page-report:4.2.34")
  }
}

plugins {
  id 'application'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '3.4.13'
  id 'org.owasp.dependencycheck' version '12.2.0'
  id 'com.github.ben-manes.versions' version '0.53.0'
  id 'org.sonarqube' version '6.3.1.5724'
  id 'uk.gov.hmcts.java' version '0.12.68'
  id "info.solidsoft.pitest" version '1.15.0'
  id 'io.freefair.lombok' version '8.14.4'
  id 'net.serenity-bdd.serenity-gradle-plugin' version '4.2.34'
  id 'au.com.dius.pact' version '4.6.20'
}

apply from: 'liquibase.gradle'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

def springCloudVersion = '2024.0.3'
def javaLoggingVersion = '8.0.0'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }

  tasks.withType(Copy) {
    filesMatching("**/*.yaml") {
      duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }
  }
}


repositories {
  mavenLocal()
  mavenCentral()
  maven { url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1' }
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << "-Xlint:unchecked"
}

tasks.named('compileJava', JavaCompile) {
  options.compilerArgs << "-Werror"
}

tasks.withType(Test) {
  useJUnitPlatform()
  testLogging {
    exceptionFormat = 'full'
  }
}

task functional(type: Test) {
  description = "Runs functional tests"
  group = "Verification"
  include "uk/gov/hmcts/reform/refunds/functional/**"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  enableAssertions = true
  scanForTestClasses = true
  reports {
    junitXml.required = true
    html.required = true
    junitXml.outputLocation = file("${project.buildDir}/test-results/functional")
    html.outputLocation = file("${project.buildDir}/reports/tests/functional")
  }
}

// Serenity Reporting
functional.finalizedBy(aggregate)

tasks.register('functionalTest') {
  description = "Alias for functional tests (keeps CI task naming consistent)"
  group = "Verification"
  dependsOn functional
}

task integration(type: Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  failFast = true
}

task smoke(type: Test) {
  description = "Runs Smoke Tests"
  useJUnitPlatform()
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
  testLogging.showStandardStreams = true
}

task runAndPublishConsumerPactTests(type: Test) {
  description = "Runs consumer pact tests"
  group = "Verification"
  systemProperty 'pact.rootDir', "pacts"
  testClassesDirs = sourceSets.test.output.classesDirs
  classpath = sourceSets.test.runtimeClasspath
  include "uk/gov/hmcts/reform/**"
  include "uk/gov/hmcts/rd/**"
}

pact {
  broker {
    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
  }
  publish {
    pactDirectory = "pacts"
    tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
    version = System.getenv("GIT_COMMIT") ?: "local-${System.currentTimeMillis()}"
  }
}

runAndPublishConsumerPactTests.finalizedBy pactPublish
check.dependsOn runAndPublishConsumerPactTests

pmd {
  toolVersion = "6.55.0"
  sourceSets = [sourceSets.main, sourceSets.test,sourceSets.functionalTest, sourceSets.integrationTest]
  reportsDir = file("$project.buildDir/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

jacocoTestReport {
  executionData(test)
  reports {
    xml.required = true
    csv.required = false
    xml.outputLocation = file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
  }
}
task smokeTest(type: Test, description: 'Runs the smoke tests', group: 'Verification') {
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}


project.tasks['sonarqube'].dependsOn jacocoTestReport


def sonarExclusions = [
  '**/model/**',
  '**/exceptions/**',
  '**/mapper/**',
  '**/mappers/**',
  '**/dtos/**',
  '**/config/**'
]

sonarqube {
  properties {
    property "sonar.java.coveragePlugin", "jacoco"
    property "sonar.projectName", "Reform :: refunds-app"
    property "sonar.projectKey", "uk.gov.hmcts.reform:refunds-app"
    property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
    property "sonar.host.url", "https://sonarcloud.io/"
    property "sonar.dynamicAnalysis", "reuseReports"
    property "sonar.java.coveragePlugin", "jacoco"
    property "sonar.jacoco.reportPaths", "${project.buildDir}/jacoco/test.exec"
    property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
    property "sonar.exclusions", sonarExclusions.join(", ")
    property "sonar.test.exclusions", sonarExclusions.join(", ")
    property "sonar.coverage.exclusions", sonarExclusions.join(", ")
    property "sonar.pitest.mode", "reuseReport"
    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}
apply from: "${rootDir}/cve-resolution-strategy.gradle"


dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    mavenBom 'org.apache.logging.log4j:log4j-bom:2.25.4'
    mavenBom 'org.testcontainers:testcontainers-bom:2.0.4'
  }

  dependencies {
    // CVE-2018-10237, CVE-2020-8908
    dependencySet(group: 'com.google.guava', version: '33.5.0-jre') {
      entry 'guava'
    }
  }
}

def versions = [
  lombok          : '1.18.44',
  reformLogging   : '5.1.7',
  springBoot      : springBoot.class.package.implementationVersion,
  jackson         : '2.19.2',
  jacocoVersion   : '0.8.5',
  restAssured     : '5.5.7',
  serenity        : '4.2.34',
  serenityCucumber: '4.3.4',
  pitest          : '1.16.1',
  gradlePitest    : '1.3.0',
  sonarPitest     : '0.5'
]

task fortifyScan(type: JavaExec)  {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
  configureEach {
    exclude group: 'commons-logging', module: 'commons-logging'
    // exclude group: 'com.vaadin.external.google', module: 'android-json'
  }
}

apply from: "${rootDir}/cve-resolution-strategy.gradle"

ext['netty.version'] = '4.1.100.Final'

dependencies {

  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.jackson
  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: javaLoggingVersion
  implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '3.2.0'
  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.5'
  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'
  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.13.2'
  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '10.9'
  implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'
  implementation group: 'commons-validator', name: 'commons-validator', version: '1.10.1'
  implementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.15.0'
  implementation group: 'io.github.openfeign.querydsl', name: 'querydsl-jpa', version:'6.12'
  implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '13.11'
  implementation group: 'io.jsonwebtoken', name: 'jjwt', version:'0.13.0'
  implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
  implementation group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.1.0'
  implementation group: 'joda-time', name: 'joda-time', version: '2.14.1'
  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'
  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.19.0'
  implementation group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: '0.5'
  implementation group: 'org.eclipse.collections', name: 'eclipse-collections-api', version: '13.0.0'
  implementation group: 'org.eclipse.collections', name: 'eclipse-collections', version: '13.0.0'
  implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '9.1.0.Final'
  implementation group: 'org.liquibase', name: 'liquibase-core'
  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.10'
  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.16'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
  implementation group: 'org.springframework.boot', name:'spring-boot-starter-oauth2-client'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign'
  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client'
  implementation group: "io.hypersistence", name: "hypersistence-utils-hibernate-63", version: "3.11.0"
  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '5.2.1-RELEASE'

  compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
  compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok

  testImplementation 'com.github.hmcts:fortify-client:1.4.10:all'
  testImplementation group: 'org.testng', name:'testng', version:'7.11.0'
  testImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version:'4.6.20'
  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
  testImplementation group: 'org.testcontainers', name: 'testcontainers-postgresql', version: '2.0.4'
  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.7'
  testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
  }
  testCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok

  smokeTestCompileOnly group :'org.projectlombok', name:'lombok', version:'1.18.44'
  smokeTestAnnotationProcessor group :'org.projectlombok', name:'lombok', version:'1.18.44'

  smokeTestImplementation group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
  smokeTestImplementation sourceSets.main.runtimeClasspath
  smokeTestImplementation sourceSets.test.runtimeClasspath

  functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  functionalTestImplementation("junit:junit:4.13.2")
  functionalTestImplementation("org.junit.vintage:junit-vintage-engine:5.11.4")
  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-cucumber', version: versions.serenityCucumber
  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-screenplay', version: versions.serenity
  functionalTestImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
  functionalTestImplementation group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
  functionalTestImplementation group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

}

application {
  mainClass = 'uk.gov.hmcts.reform.refunds.RefundApplication'
}

bootJar {
  getArchiveFileName().set(provider {
    'refunds-api.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

checkstyle {
  toolVersion = "7.8.2"
}
pmdTest.enabled = false
pmdFunctionalTest.enabled = false

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}

serenity {
  reports = ["single-page-html"]
}

pitest {
  targetClasses = ['uk.gov.hmcts.reform.refunds.filters.*',
                   'uk.gov.hmcts.reform.refunds.service.*',
                   'uk.gov.hmcts.reform.refunds.config.*',
                   'uk.gov.hmcts.reform.refunds.controllers.*']
  excludedClasses = ['uk.gov.hmcts.reform.refunds.state.*',
                     'uk.gov.hmcts.reform.refunds.mappers.*']
  threads = 15
  testSourceSets = [sourceSets.test]
  mainSourceSets = [sourceSets.main]
  fileExtensionsToFilter.addAll('xml','json')
  outputFormats = ['XML', 'HTML','CSV']
  mutationThreshold = 9
  coverageThreshold = 0
  jvmArgs = ['-Xms1G','-Xmx3G']
  timestampedReports = false
  failWhenNoMutations = false
  detectInlinedCode = true
}
